chart/templates/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-web
  labels:
    app: redis-web
    app.kubernetes.io/instance: redis-web
    app.kubernetes.io/name: service
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: service-0.1.10
    version: v1
  namespace: argocd-web-service
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app.kubernetes.io/instance: redis-web
    app.kubernetes.io/name: service
