chart/templates/istio-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-web
  namespace: argocd-web
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway
  - mesh # applies to all the sidecars in the mesh
  http:
    - match:
      - uri:
          prefix: /
        route:
        - destination:
            host: argocd-helm-example-service.argocd-helm-example-service.svc.cluster.local
          weight: 80
